new color scheme

--- a/index.html
+++ b/index.html
@@ -231,7 +231,8 @@
     </div>
   </div>
 
-  <footer>-- color scheme: <a href="http://ethanschoonover.com/solarized" target="_blank">solarized</a> --</footer>
+  <footer>-- color scheme inspired by <a href="http://ethanschoonover.com/solarized" target="_blank">solarized</a> --
+  </footer>
 </body>
 
 </html>
