use stackoverflow hightlighting for code example

--- a/index.html
+++ b/index.html
@@ -27,22 +27,15 @@
   <div class="wingdings">¶</div>
   <div class="container">
     <div class="box">
-      <div class="code">
-        <span class="comment"># how to ace an interview</span><br>
-        <span class="keyword">for</span> i <span class="keyword">in</span> range(1, 51)<span class="op">:</span><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;s <span class="op">=</span> <span class="string">&apos;&apos;</span><span
-          class="op">:</span><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;<span class="keyword">if</span> i <span class="op">%</span> 3 <span class="op">==</span>
-        0<span class="op">:</span><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;s <span class="op">+=</span> <span
-          class="string">&apos;mono&apos;</span><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;<span class="keyword">if</span> i <span class="op">%</span> 5 <span class="op">==</span>
-        0<span class="op">:</span><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;s <span class="op">+=</span> <span
-          class="string">&apos;noki&apos;</span><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;<span class="keyword">print(</span>s <span class="keyword">or</span> i<span
-          class="keyword">)</span><br>
-      </div>
+      <code>      <span class="comment"># how to ace an interview</span>
+      <span class="keyword">for</span> i <span class="keyword">in</span> <span class="built_in">range</span>(<span class="number">1</span>, <span class="number">51</span>):
+          s = <span class="string">''</span>:
+          <span class="keyword">if</span> i % <span class="number">3</span> == <span class="number">0</span>:
+              s += <span class="string">'mono'</span>
+          <span class="keyword">if</span> i % <span class="number">5</span> == <span class="number">0</span>:
+              s += <span class="string">'noki'</span>
+          <span class="built_in">print</span>(s <span class="keyword">or</span> i)
+      </code>
     </div>
     <div class="box">
       <div class="dropcap">___&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;___<br>
