make donation text and string cyan

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
   <div class="container">
     <div class="background">%$§</div>
-    <div class="box donation orange">
+    <div class="box donation">
       <div class="small-headline">
         <span class="italic">mononoki is a free font developed as a passion project in my spare time, but if you enjoy
           my work and would like to leave a tip, here is my
