make the dropcaps screen reader accessible

--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
       </code>
     </div>
     <div class="box">
-      <div class="dropcap">___&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;___<br>
+      <div aria-hidden="true" class="dropcap">___&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;___<br>
         &nbsp;|\\&nbsp;&nbsp;&nbsp;&nbsp;/||<br>
         &nbsp;|&nbsp;\\&nbsp;&nbsp;/&nbsp;||<br>
         &nbsp;|&nbsp;&nbsp;\\/&nbsp;&nbsp;||<br>
         _|_&nbsp;&nbsp;'&nbsp;&nbsp;_||_&nbsp;
-      </div><br>ononoki is a typeface by Matthias Tellen, created to enhance code formatting.<br>
+      </div><br>
+      <div class="droptext">Mononoki is a typeface by Matthias Tellen, created to enhance code
+        formatting.</div>
     </div>
   </div>
 
@@ -59,14 +61,15 @@
     </div>
 
     <div class="box">
-      <div class="dropcap">________<br>
+      <div aria-hidden="true" class="dropcap">________<br>
         |/&nbsp;||&nbsp;\|&nbsp;<br>
         &nbsp;&nbsp;&nbsp;||<br>
         &nbsp;&nbsp;&nbsp;||<br>
         &nbsp;&nbsp;_||_</div><br>
-      his is a universal requirement for source code typography. It's not just a historic artifact from the olden days
-      of terminals, but a useful convention to allow two dimensional structuring and highlighting differences on the
-      character level.<br>
+      <div class="droptext">This is a universal requirement for source code typography. It's not just a historic
+        artifact from the olden days of terminals, but a useful convention to allow two dimensional structuring and
+        highlighting differences on the character level.
+      </div>
     </div>
   </div>
   <div class="wingdings">¶</div>
@@ -84,16 +87,17 @@
 
     </div>
     <div class="box">
-      <div class="dropcap">_____<br>
+      <div aria-hidden="true" class="dropcap">_____<br>
         &nbsp;||&nbsp;\\<br>
         &nbsp;||_//<br>
         &nbsp;||\\<br>
         _||_\\_&nbsp;</div><br>
-      ight now we are in the transition to high resolution displays, bringing font rendering quality on screen to the
-      realms of print quality. But we're not there yet, and especially on cheap laptops and typical office displays this
-      transition will not be accomplished in the foreseeable future. So the glyphs must survive being squashed into a
-      grid of a few pixels extremely well, but I still wanted to design them with attention to detail although it is
-      only visible in print or on retina displays.
+      <div class="droptext">Right now we are in the transition to high resolution displays, bringing font rendering
+        quality on screen to the realms of print quality. But we're not there yet, and especially on cheap laptops and
+        typical office displays this transition will not be accomplished in the foreseeable future. So the glyphs must
+        survive being squashed into a grid of a few pixels extremely well, but I still wanted to design them with
+        attention to detail although it is only visible in print or on retina displays.
+      </div>
     </div>
 
   </div>
@@ -109,14 +113,15 @@
     </div>
 
     <div class="box">
-      <div class="dropcap">_______<br>
+      <div aria-hidden="true" class="dropcap">_______<br>
         &nbsp;||&nbsp;&nbsp;\|<br>
         &nbsp;||__<br>
         &nbsp;||<br>
         _||__/|&nbsp;</div><br>
-      very character is clearly distinguishable from similar looking characters. While this seems obvious, it comes with
-      costs, like inferior long-text readability and a less consistent appearance. I wanted to reach this goal with
-      minimal tradeoffs.
+      <div class="droptext">Every character is clearly distinguishable from similar looking characters. While this seems
+        obvious, it comes with costs, like inferior long-text readability and a less consistent appearance. I
+        wanted to reach this goal with minimal tradeoffs.
+      </div>
     </div>
   </div>
   <div class="wingdings">¶</div>
