use ndash in text, it looks better

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         &nbsp;||<br>
         _||__/|&nbsp;</div><br>
       <div class="droptext">Every character is clearly distinguishable from similar looking characters. While this seems
-        obvious, it comes with costs, like inferior long-text readability and a less consistent appearance. I
+        obvious, it comes with costs, like inferior long&ndash;text readability and a less consistent appearance. I
         wanted to reach this goal with minimal tradeoffs.
       </div>
     </div>
