consistent line breaks in the html

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   </div>
 
   <div class="wingdings">¶</div>
+
   <div class="container">
     <div class="box">
       <code>      <span class="comment"># how to ace an interview</span>
@@ -54,12 +55,10 @@
 
   <div class="container">
     <div class="background">([{</div>
-
     <div class="box monospaced-title">
       <span class="accent">m</span>o<span class="accent">n</span>o<span class="accent">s</span>p<span
         class="accent">a</span>c<span class="accent">e</span>
     </div>
-
     <div class="box">
       <div aria-hidden="true" class="dropcap">________<br>
         |/&nbsp;||&nbsp;\|&nbsp;<br>
@@ -72,11 +71,11 @@
       </div>
     </div>
   </div>
+
   <div class="wingdings">¶</div>
 
   <div class="container">
     <div class="background">&g<span class="italic">g</span></div>
-
     <div class="box resolution-title">
       <span class="italic">works well on</span>
       <div class="high">high</div>
@@ -84,7 +83,6 @@
       <div><img id="low-png" src="low.png" alt="low" height="45"></div>
       <span class="italic">resolution displays</span>
       </span>
-
     </div>
     <div class="box">
       <div aria-hidden="true" class="dropcap">_____<br>
@@ -99,19 +97,16 @@
         attention to detail although it is only visible in print or on retina displays.
       </div>
     </div>
-
   </div>
 
   <div class="wingdings">¶</div>
 
   <div class="container">
     <div class="background">!?:;</div>
-
     <div class="box align-right">
       <div class="italic">differentiation of characters</div>
       <div class="big">|1lI B8 CDO0 </div>
     </div>
-
     <div class="box">
       <div aria-hidden="true" class="dropcap">_______<br>
         &nbsp;||&nbsp;&nbsp;\|<br>
@@ -124,6 +119,7 @@
       </div>
     </div>
   </div>
+
   <div class="wingdings">¶</div>
 
   <div class="container">
@@ -229,7 +225,8 @@
     </div>
   </div>
 
-  <footer>-- color scheme inspired by <a href="http://ethanschoonover.com/solarized" target="_blank">solarized</a> --
+  <footer>
+    -- color scheme inspired by <a href="http://ethanschoonover.com/solarized" target="_blank">solarized</a> --
   </footer>
 </body>
 
