aria-hide background characters + aria attributes always after class

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </code>
     </div>
     <div class="box">
-      <div aria-hidden="true" class="dropcap">___&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;___<br>
+      <div class="dropcap" aria-hidden="true">___&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;___<br>
         &nbsp;|\\&nbsp;&nbsp;&nbsp;&nbsp;/||<br>
         &nbsp;|&nbsp;\\&nbsp;&nbsp;/&nbsp;||<br>
         &nbsp;|&nbsp;&nbsp;\\/&nbsp;&nbsp;||<br>
@@ -54,13 +54,13 @@
   <div class="wingdings">¶</div>
 
   <div class="container">
-    <div class="background">([{</div>
+    <div class="background" aria-hidden="true">([{</div>
     <div class="box monospaced-title">
       <span class="accent">m</span>o<span class="accent">n</span>o<span class="accent">s</span>p<span
         class="accent">a</span>c<span class="accent">e</span>
     </div>
     <div class="box">
-      <div aria-hidden="true" class="dropcap">________<br>
+      <div class="dropcap" aria-hidden="true">________<br>
         |/&nbsp;||&nbsp;\|&nbsp;<br>
         &nbsp;&nbsp;&nbsp;||<br>
         &nbsp;&nbsp;&nbsp;||<br>
@@ -75,7 +75,7 @@
   <div class="wingdings">¶</div>
 
   <div class="container">
-    <div class="background">&g<span class="italic">g</span></div>
+    <div class="background" aria-hidden="true">&g<span class="italic">g</span></div>
     <div class="box resolution-title">
       <span class="italic">works well on</span>
       <div class="high">high</div>
@@ -85,7 +85,7 @@
       </span>
     </div>
     <div class="box">
-      <div aria-hidden="true" class="dropcap">_____<br>
+      <div class="dropcap" aria-hidden="true">_____<br>
         &nbsp;||&nbsp;\\<br>
         &nbsp;||_//<br>
         &nbsp;||\\<br>
@@ -102,13 +102,13 @@
   <div class="wingdings">¶</div>
 
   <div class="container">
-    <div class="background">!?:;</div>
+    <div class="background" aria-hidden="true">!?:;</div>
     <div class="box align-right">
       <div class="italic">differentiation of characters</div>
       <div class="big">|1lI B8 CDO0 </div>
     </div>
     <div class="box">
-      <div aria-hidden="true" class="dropcap">_______<br>
+      <div class="dropcap" aria-hidden="true">_______<br>
         &nbsp;||&nbsp;&nbsp;\|<br>
         &nbsp;||__<br>
         &nbsp;||<br>
@@ -123,7 +123,7 @@
   <div class="wingdings">¶</div>
 
   <div class="container">
-    <div class="background">%$§</div>
+    <div class="background" aria-hidden="true">%$§</div>
     <div class="box donation">
       <span class="italic">mononoki is a free font developed as a passion project in my spare time, but if you enjoy
         my work and would like to leave a tip, here is my
