--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="background" aria-hidden="true">!?:;</div>
     <div class="box align-right">
       <div class="italic">differentiation of characters</div>
-      <div class="big">|1lI B8 CDO0 </div>
+      <div class="big" aria-hidden="true">|1lI B8 CDO0 </div>
     </div>
     <div class="box">
       <div class="dropcap" aria-hidden="true">_______<br>
