give a button-like outline to the link at the top

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
   <div class="container">
     <div class="box centered">
-      <a href="https://github.com/madmalik/mononoki/tree/main">View on GitHub</a>
+      <a href="https://github.com/madmalik/mononoki/tree/main" class="top-link">View on GitHub</a>
     </div>
     <div class="box centered">
-      <a href="https://github.com/madmalik/mononoki/releases/download/1.4/mononoki.zip">Download</a>
+      <a href="https://github.com/madmalik/mononoki/releases/download/1.4/mononoki.zip" class="top-link">Download</a>
     </div>
   </div>
 
