remove empty line at the end of code block

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
               s += <span class="string">'mono'</span>
           <span class="keyword">if</span> i % <span class="number">5</span> == <span class="number">0</span>:
               s += <span class="string">'noki'</span>
-          <span class="built_in">print</span>(s <span class="keyword">or</span> i)
-      </code>
+          <span class="built_in">print</span>(s <span class="keyword">or</span> i)</code>
     </div>
     <div class="box">
       <div class="dropcap" aria-hidden="true">___&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;___<br>
