no extra span needed

--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
   <div class="wingdings">¶</div>
 
   <div class="container">
-    <div class="box donation">
-      <span class="italic">mononoki is a free font developed as a passion project in my spare time, but if you enjoy
-        my work and would like to leave a tip, here is my
-        <a href="https://www.paypal.com/donate/?hosted_button_id=SPNWPX4ZB7ASY" target="_blank">tip jar</a>!</span>
+    <div class="box donation italic">
+      mononoki is a free font developed as a passion project in my spare time, but if you enjoy
+      my work and would like to leave a tip, here is my
+      <a href="https://www.paypal.com/donate/?hosted_button_id=SPNWPX4ZB7ASY" target="_blank">tip jar</a>!
     </div>
   </div>
 
