--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <span class="italic">works well on</span>
       <div class="high">high</div>
       <span class="italic">and</span>
-      <div><img id="low-png" src="low.png" alt="low" height="45"></div>
+      <div><img id="low-png" src="low_dark.png" alt="low" height="45"></div>
       <span class="italic">resolution displays</span>
       </span>
     </div>
