do not wrap footer at --

--- a/index.html
+++ b/index.html
@@ -208,7 +208,8 @@
   </div>
 
   <footer>
-    -- color scheme inspired by <a href="http://ethanschoonover.com/solarized" target="_blank">solarized</a> --
+    <span class="nowarp">-- color</span> scheme inspired by <span class="nowrap"><a
+        href="http://ethanschoonover.com/solarized" target="_blank">solarized</a> --</span>
   </footer>
 </body>
 
