center the differentiation title

--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 
     <div class="wingdings span-all">¶</div>
 
-    <div class="box align-right">
+    <div class="box differentiation-title">
       <div class="italic">differentiation of characters</div>
-      <div class="big" aria-hidden="true">|1lI B8 CDO0 </div>
+      <div class="example" aria-hidden="true">|1lI B8 CDO0 </div>
     </div>
     <div class="box">
       <div class="dropcap" aria-hidden="true">_______<br>
