--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
     <div class="box donation italic span-all">
       mononoki is a free font developed as a passion project in my spare time, but if you enjoy
       my work and would like to leave a tip, here is my
-      <a href="https://www.paypal.com/donate/?hosted_button_id=SPNWPX4ZB7ASY" target="_blank">tip jar</a>!
+      <a href="https://www.paypal.com/donate/?hosted_button_id=SPNWPX4ZB7ASY" target="_blank" class="nowrap">tip
+        jar</a>!
     </div>
 
     <div class="wingdings span-all">¶</div>
@@ -207,7 +208,7 @@
   </div>
 
   <footer>
-    <span class="nowarp">-- color</span> scheme inspired by <span class="nowrap"><a
+    <span class="nowrap">-- color</span> scheme inspired by <span class="nowrap"><a
         href="http://ethanschoonover.com/solarized" target="_blank">solarized</a> --</span>
   </footer>
 </body>
