use helper class to set footer italic

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     </div>
   </div>
 
-  <footer>
+  <footer class="italic">
     <span class="nowrap">-- color</span> scheme inspired by <span class="nowrap"><a
         href="http://ethanschoonover.com/solarized" target="_blank">solarized</a> --</span>
   </footer>
