make the top links inline-blocks and fix the spacing around the grid

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="grid">
-      <div class="box">
+      <div class="box half-gap">
         <a href="https://github.com/madmalik/mononoki/tree/main" class="top-link">View on GitHub</a>
       </div>
       <div class="box">
