slightly edited copy to improve language and clarity

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           &nbsp;|&nbsp;&nbsp;\\/&nbsp;&nbsp;||<br>
           _|_&nbsp;&nbsp;'&nbsp;&nbsp;_||_&nbsp;
         </div><br>
-        <div class="droptext">Mononoki is a typeface by Matthias Tellen, created to enhance code
+        <div class="droptext">Mononoki is a typeface by Matthias Tellen, created to support code
           formatting.</div>
       </div>
 
@@ -81,10 +81,10 @@
           &nbsp;||\\<br>
           _||_\\_&nbsp;</div><br>
         <div class="droptext">Right now we are in the transition to high resolution displays, bringing font rendering
-          quality on screen to the realms of print quality. But we're not there yet, and especially on cheap laptops and
-          typical office displays this transition will not be accomplished in the foreseeable future. So the glyphs must
-          survive being squashed into a grid of a few pixels extremely well, but I still wanted to design them with
-          attention to detail although it is only visible in print or on retina displays.
+          quality on screen to the realms of print quality. But we're not there yet, and especially on many laptops and
+          typical office displays this transition will not be accomplished in the foreseeable future. So I wanted the
+          glyphs to survive well when squashed into a grid of a few pixels, but still have a level of detail appropriate
+          for print and retina displays.
         </div>
       </div>
 
@@ -100,9 +100,9 @@
           &nbsp;||__<br>
           &nbsp;||<br>
           _||__/|&nbsp;</div><br>
-        <div class="droptext">Every character is clearly distinguishable from similar looking characters. While this
-          seems obvious, it comes with costs, like inferior long&ndash;text readability and a less consistent
-          appearance. I wanted to reach this goal with minimal tradeoffs.
+        <div class="droptext">Each character is designed to be clearly distinguishable from similar looking characters.
+          While this seems obvious, it comes with costs, like inferior long&ndash;text readability and a less consistent
+          appearance. I tried to reach this goal with minimal tradeoffs.
         </div>
       </div>
 
