Update to version 1.6
Update font files, link to zip file and list of characters

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="https://github.com/madmalik/mononoki/tree/main" class="top-link">View on GitHub</a>
       </div>
       <div class="box">
-        <a href="https://github.com/madmalik/mononoki/releases/download/1.5/mononoki.zip" class="top-link">Download</a>
+        <a href="https://github.com/madmalik/mononoki/releases/download/1.6/mononoki.zip" class="top-link">Download</a>
       </div>
 
       <div class="wingdings span-all">¶</div>
@@ -120,96 +120,107 @@
       <div class="span-all">
         <div class="showcase-title">All characters contained in mononoki</div>
         <div class="showcase">
-          &#x0041; &#x00C1; &#x0102; &#x00C2; &#x00C4; &#x00C0; &#x0100; &#x0104; &#x00C5;
-          &#x00C3; &#x00C6; &#x0042; &#x0043; &#x0106; &#x010C; &#x00C7; &#x0108; &#x0044;
-          &#x00D0; &#x010E; &#x0110; &#x0045; &#x00C9; &#x011A; &#x00CA; &#x00CB; &#x0116;
-          &#x00C8; &#x0112; &#x0118; &#x0046; &#x0047; &#x011E; &#x011C; &#x0048; &#x0124;
-          &#x0049; &#x0132; &#x00CD; &#x00CE; &#x00CF; &#x0130; &#x00CC; &#x012A; &#x012E;
-          &#x004A; &#x0134; &#x004B; &#x004C; &#x0139; &#x013D; &#x013F; &#x0141; &#x004D;
-          &#x004E; &#x0143; &#x0147; &#x00D1; &#x004F; &#x00D3; &#x00D4; &#x00D6; &#x00D2;
+          &#x0041; &#x00C1; &#x0102; &#x1EAE; &#x1EB6; &#x1EB0; &#x1EB2; &#x1EB4; &#x00C2;
+          &#x1EA4; &#x1EAC; &#x1EA6; &#x1EA8; &#x1EAA; &#x00C4; &#x1EA0; &#x00C0; &#x1EA2;
+          &#x0100; &#x0104; &#x00C5; &#x00C3; &#x00C6; &#x0042; &#x0043; &#x0106; &#x010C;
+          &#x00C7; &#x0108; &#x0044; &#x00D0; &#x010E; &#x0110; &#x0045; &#x00C9; &#x011A;
+          &#x00CA; &#x1EBE; &#x1EC6; &#x1EC0; &#x1EC2; &#x1EC4; &#x00CB; &#x0116; &#x1EB8;
+          &#x00C8; &#x1EBA; &#x0112; &#x0118; &#x1EBC; &#x0046; &#x0047; &#x011E; &#x011C;
+          &#x0048; &#x0124; &#x0049; &#x0132; &#x00CD; &#x00CE; &#x00CF; &#x0130; &#x1ECA;
+          &#x00CC; &#x1EC8; &#x012A; &#x012E; &#x0128; &#x004A; &#x0134; &#x004B; &#x004C;
+          &#x0139; &#x013D; &#x013F; &#x0141; &#x004D; &#x004E; &#x0143; &#x0147; &#x00D1;
+          &#x004F; &#x00D3; &#x00D4; &#x1ED0; &#x1ED8; &#x1ED2; &#x1ED4; &#x1ED6; &#x00D6;
+          &#x1ECC; &#x00D2; &#x1ECE; &#x01A0; &#x1EDA; &#x1EE2; &#x1EDC; &#x1EDE; &#x1EE0;
           &#x0150; &#x014C; &#x00D8; &#x00D5; &#x0152; &#x0050; &#x00DE; &#x0051; &#x0052;
           &#x0154; &#x0158; &#x0053; &#x015A; &#x0160; &#x015E; &#x015C; &#x1E9E; &#x0054;
-          &#x0166; &#x0164; &#x0162; &#x0055; &#x00DA; &#x016C; &#x00DB; &#x00DC; &#x00D9;
-          &#x0170; &#x016A; &#x0172; &#x016E; &#x0056; &#x0057; &#x1E82; &#x0174; &#x1E84;
-          &#x1E80; &#x0058; &#x0059; &#x00DD; &#x0176; &#x0178; &#x1EF2; &#x005A; &#x0179;
-          &#x017D; &#x017B; &#x0061; &#x00E1; &#x0103; &#x00E2; &#x00E4; &#x00E0; &#x0101;
-          &#x0105; &#x00E5; &#x00E3; &#x00E6; &#x0062; &#x0063; &#x0107; &#x010D; &#x00E7;
-          &#x0109; &#x0064; &#x00F0; &#x010F; &#x0111; &#x0065; &#x00E9; &#x011B; &#x00EA;
-          &#x00EB; &#x0117; &#x00E8; &#x0113; &#x0119; &#x0066; &#x0067; &#x011F; &#x011D;
-          &#x0068; &#x0125; &#x0069; &#x0131; &#x00ED; &#x00EE; &#x00EF; &#x00EC; &#x0133;
-          &#x012B; &#x012F; &#x006A; &#x0237; &#x0135; &#x006B; &#x006C; &#x013A; &#x019B;
-          &#x013E; &#x0140; &#x0142; &#x006D; &#x006E; &#x0144; &#x0148; &#x00F1; &#x006F;
-          &#x00F3; &#x00F4; &#x00F6; &#x00F2; &#x0151; &#x014D; &#x00F8; &#x00F5; &#x0153;
-          &#x0070; &#x00FE; &#x0071; &#x0072; &#x0155; &#x0159; &#x0073; &#x015B; &#x0161;
-          &#x015F; &#x015D; &#x00DF; &#x0074; &#x0167; &#x0165; &#x0163; &#x0075; &#x00FA;
-          &#x016D; &#x00FB; &#x00FC; &#x00F9; &#x0171; &#x016B; &#x0173; &#x016F; &#x0076;
-          &#x0077; &#x1E83; &#x0175; &#x1E85; &#x1E81; &#x0078; &#x0079; &#x00FD; &#x0177;
-          &#x00FF; &#x1EF3; &#x007A; &#x017A; &#x017E; &#x017C; &#x1D62; &#x02E1; &#x207F;
-          &#x02B3; &#x00AA; &#x00BA; &#x0410; &#x0411; &#x0412; &#x0413; &#x0403; &#x0414;
-          &#x0415; &#x0401; &#x0416; &#x0417; &#x0418; &#x0419; &#x041A; &#x040C; &#x041B;
-          &#x041C; &#x041D; &#x041E; &#x041F; &#x0420; &#x0421; &#x0422; &#x0423; &#x0424;
-          &#x0425; &#x0427; &#x0426; &#x0428; &#x0429; &#x042C; &#x042B; &#x042A; &#x0405;
-          &#x042D; &#x0406; &#x0407; &#x0408; &#x042E; &#x042F; &#x04C0; &#x04E2; &#x04EE;
-          &#x0430; &#x0431; &#x0432; &#x0433; &#x0453; &#x0434; &#x0435; &#x0451; &#x0436;
-          &#x0437; &#x0438; &#x0439; &#x043A; &#x045C; &#x043B; &#x043C; &#x043D; &#x043E;
-          &#x043F; &#x0440; &#x0441; &#x0442; &#x0443; &#x0444; &#x0445; &#x0447; &#x0446;
-          &#x0448; &#x0449; &#x044C; &#x044B; &#x044A; &#x0455; &#x044D; &#x0456; &#x0458;
-          &#x044E; &#x044F; &#x04BB; &#x04E3; &#x04EF; &#x0391; &#x0392; &#x0393; &#x0394;
-          &#x0395; &#x0396; &#x0397; &#x0398; &#x0399; &#x039A; &#x039B; &#x039C; &#x039D;
-          &#x039E; &#x039F; &#x03A0; &#x03A1; &#x03A3; &#x03A4; &#x03A5; &#x03A6; &#x03A7;
-          &#x03A8; &#x03A9; &#x0386; &#x0388; &#x0389; &#x038A; &#x038C; &#x038E; &#x038F;
-          &#x03AA; &#x03AB; &#x03B1; &#x03B2; &#x03B3; &#x03B4; &#x03B5; &#x03B6; &#x03B7;
-          &#x03B8; &#x03B9; &#x03BA; &#x03BB; &#x03BC; &#x03BD; &#x03BE; &#x03BF; &#x03C0;
-          &#x03C1; &#x03C2; &#x03C3; &#x03C4; &#x03C5; &#x03C6; &#x03C7; &#x03C8; &#x03C9;
-          &#x03AF; &#x03CA; &#x0390; &#x03CD; &#x03CB; &#x03B0; &#x03CC; &#x03CE; &#x03AC;
-          &#x03AD; &#x03AE; &#x2102; &#x210D; &#x2115; &#x2119; &#x211A; &#x211D; &#x2124;
-          &#x1D47; &#x1D9C; &#x0030; &#x0031; &#x0032; &#x0033; &#x0034; &#x0035; &#x0036;
-          &#x0037; &#x0038; &#x0039; &#x215F; &#x00BD; &#x2189; &#x2153; &#x2154; &#x00BC;
-          &#x00BE; &#x2155; &#x2156; &#x2157; &#x2158; &#x2159; &#x215A; &#x2150; &#x215B;
-          &#x215C; &#x215D; &#x215E; &#x2151; &#x2152; &#x2080; &#x2081; &#x2082; &#x2083;
-          &#x2084; &#x2085; &#x2086; &#x2087; &#x2088; &#x2089; &#x2070; &#x00B9; &#x00B2;
-          &#x00B3; &#x2074; &#x2075; &#x2076; &#x2077; &#x2078; &#x2079; &#x0387; &#x037E;
-          &#x27E8; &#x27E9; &#x002E; &#x002C; &#x003A; &#x003B; &#x2026; &#x0021; &#x00A1;
-          &#x003F; &#x00BF; &#x00B7; &#x2022; &#x002A; &#x203C; &#x0023; &#x2024; &#x002F;
-          &#x005C; &#x2025; &#x002D; &#x2013; &#x2014; &#x005F; &#x208D; &#x208E; &#x0028;
-          &#x0029; &#x007B; &#x007D; &#x005B; &#x005D; &#x2308; &#x230A; &#x2309; &#x230B;
-          &#x207D; &#x207E; &#x201A; &#x201E; &#x201C; &#x201D; &#x2018; &#x2019; &#x201B;
-          &#x00AB; &#x00BB; &#x2039; &#x203A; &#x0022; &#x0027; &#x0192; &#x0374; &#x0375;
-          &#x2605; &#x0040; &#x0026; &#x00B6; &#x00A7; &#x00A9; &#x00AE; &#x2122; &#x00B0;
-          &#x2032; &#x2033; &#x007C; &#x00A6; &#x2113; &#x2020; &#x2021; &#x00A2; &#x00A4;
-          &#x0024; &#x20AC; &#x00A3; &#x00A5; &#x2250; &#x2243; &#x2219; &#x2215; &#x2238;
-          &#x2208; &#x220E; &#x208C; &#x207C; &#x2261; &#x2203; &#x2273; &#x2272; &#x208B;
-          &#x207B; &#x228E; &#x2244; &#x220C; &#x2209; &#x2262; &#x2284; &#x2285; &#x002B;
-          &#x2212; &#x00D7; &#x00F7; &#x003D; &#x2260; &#x003E; &#x003C; &#x2265; &#x2264;
-          &#x00B1; &#x2248; &#x007E; &#x00AC; &#x005E; &#x2205; &#x221E; &#x2227; &#x2228;
-          &#x2229; &#x222A; &#x222B; &#x2206; &#x220F; &#x2211; &#x221A; &#x2202; &#x00B5;
-          &#x2225; &#x0025; &#x2030; &#x208A; &#x207A; &#x2237; &#x225F; &#x22A2; &#x2218;
-          &#x2294; &#x2282; &#x2286; &#x220B; &#x2283; &#x2287; &#x22A4; &#x22A3; &#x2204;
-          &#x2234; &#x2288; &#x2289; &#x228A; &#x228B; &#x2295; &#x2200; &#x22A5; &#x2982;
-          &#x2297; &#x2191; &#x2197; &#x2192; &#x2198; &#x2193; &#x2199; &#x2190; &#x2196;
-          &#x2194; &#x2195; &#x219E; &#x21A0; &#x21D2; &#x21D0; &#x21D4; &#x2581; &#x2582;
-          &#x2583; &#x2584; &#x2585; &#x2586; &#x2587; &#x2588; &#x2580; &#x2594; &#x258F;
-          &#x258E; &#x258D; &#x258C; &#x258B; &#x258A; &#x2589; &#x2590; &#x2595; &#x2596;
-          &#x2597; &#x2598; &#x2599; &#x259A; &#x259B; &#x259C; &#x259D; &#x259E; &#x259F;
-          &#x2591; &#x2592; &#x2593; &#x2566; &#x2557; &#x2554; &#x2550; &#x2569; &#x255D;
-          &#x255A; &#x2551; &#x256C; &#x2563; &#x2560; &#x2565; &#x2556; &#x2553; &#x2530;
-          &#x2512; &#x2527; &#x250E; &#x251F; &#x2541; &#x252F; &#x2511; &#x2529; &#x250D;
-          &#x2521; &#x2547; &#x2564; &#x2555; &#x2552; &#x254D; &#x254F; &#x257B; &#x2533;
-          &#x2513; &#x250F; &#x2501; &#x2578; &#x257E; &#x2509; &#x250B; &#x257A; &#x2505;
-          &#x2507; &#x2579; &#x253B; &#x251B; &#x257F; &#x2517; &#x2503; &#x254B; &#x252B;
-          &#x2523; &#x2545; &#x252D; &#x2535; &#x253D; &#x2532; &#x253A; &#x254A; &#x2543;
-          &#x256E; &#x256D; &#x256F; &#x2570; &#x254C; &#x254E; &#x2573; &#x2572; &#x2571;
-          &#x2577; &#x252C; &#x2510; &#x250C; &#x2574; &#x257C; &#x2508; &#x250A; &#x2576;
-          &#x2504; &#x2506; &#x2575; &#x257D; &#x2534; &#x2518; &#x2514; &#x2502; &#x253C;
-          &#x2524; &#x251C; &#x2546; &#x252E; &#x2536; &#x253E; &#x2531; &#x2539; &#x2549;
-          &#x2544; &#x2500; &#x2568; &#x255C; &#x2559; &#x2540; &#x2538; &#x2526; &#x251A;
-          &#x251E; &#x2516; &#x2548; &#x2537; &#x252A; &#x2519; &#x2522; &#x2515; &#x2567;
-          &#x255B; &#x2558; &#x256B; &#x2562; &#x255F; &#x2542; &#x2528; &#x2520; &#x253F;
-          &#x2525; &#x251D; &#x256A; &#x2561; &#x255E; &#x2665; &#x0384; &#x0385; &#x0323;
-          &#x00A8; &#x02D9; &#x0060; &#x00B4; &#x02DD; &#x02C6; &#x02C7; &#x02D8; &#x02DA;
-          &#x02DC; &#x00AF; &#x00B8; &#x02DB; &#xE0A0; &#xE0A1; &#xE0A2; &#xE0A3; &#xE0B0;
-          &#xE0B1; &#xE0B2; &#xE0B3; &#xE0B4; &#xE0B5; &#xE0B6; &#xE0B7; &#xE0B8; &#xE0B9;
-          &#xE0BA; &#xE0BB; &#xE0BC; &#xE0BD; &#xE0BE; &#xE0BF;
+          &#x0166; &#x0164; &#x0162; &#x0055; &#x00DA; &#x016C; &#x00DB; &#x00DC; &#x1EE4;
+          &#x00D9; &#x1EE6; &#x01AF; &#x1EE8; &#x1EF0; &#x1EEA; &#x1EEC; &#x1EEE; &#x0170;
+          &#x016A; &#x0172; &#x016E; &#x0168; &#x0056; &#x0057; &#x1E82; &#x0174; &#x1E84;
+          &#x1E80; &#x0058; &#x0059; &#x00DD; &#x0176; &#x0178; &#x1EF4; &#x1EF2; &#x1EF6;
+          &#x1EF8; &#x005A; &#x0179; &#x017D; &#x017B; &#x0061; &#x00E1; &#x0103; &#x1EAF;
+          &#x1EB7; &#x1EB1; &#x1EB3; &#x1EB5; &#x00E2; &#x1EA5; &#x1EAD; &#x1EA7; &#x1EA9;
+          &#x1EAB; &#x00E4; &#x1EA1; &#x00E0; &#x1EA3; &#x0101; &#x0105; &#x00E5; &#x00E3;
+          &#x00E6; &#x0062; &#x0063; &#x0107; &#x010D; &#x00E7; &#x0109; &#x0064; &#x00F0;
+          &#x010F; &#x0111; &#x0065; &#x00E9; &#x011B; &#x00EA; &#x1EBF; &#x1EC7; &#x1EC1;
+          &#x1EC3; &#x1EC5; &#x00EB; &#x0117; &#x1EB9; &#x00E8; &#x1EBB; &#x0113; &#x0119;
+          &#x1EBD; &#x0066; &#x0067; &#x011F; &#x011D; &#x0068; &#x0125; &#x0069; &#x0131;
+          &#x00ED; &#x00EE; &#x00EF; &#x1ECB; &#x00EC; &#x1EC9; &#x0133; &#x012B; &#x012F;
+          &#x0129; &#x006A; &#x0237; &#x0135; &#x006B; &#x006C; &#x013A; &#x019B; &#x013E;
+          &#x0140; &#x0142; &#x006D; &#x006E; &#x0144; &#x0148; &#x00F1; &#x006F; &#x00F3;
+          &#x00F4; &#x1ED1; &#x1ED9; &#x1ED3; &#x1ED5; &#x1ED7; &#x00F6; &#x1ECD; &#x00F2;
+          &#x1ECF; &#x01A1; &#x1EDB; &#x1EE3; &#x1EDD; &#x1EDF; &#x1EE1; &#x0151; &#x014D;
+          &#x00F8; &#x00F5; &#x0153; &#x0070; &#x00FE; &#x0071; &#x0072; &#x0155; &#x0159;
+          &#x0073; &#x015B; &#x0161; &#x015F; &#x015D; &#x00DF; &#x0074; &#x0167; &#x0165;
+          &#x0163; &#x0075; &#x00FA; &#x016D; &#x00FB; &#x00FC; &#x1EE5; &#x00F9; &#x1EE7;
+          &#x01B0; &#x1EE9; &#x1EF1; &#x1EEB; &#x1EED; &#x1EEF; &#x0171; &#x016B; &#x0173;
+          &#x016F; &#x0169; &#x0076; &#x0077; &#x1E83; &#x0175; &#x1E85; &#x1E81; &#x0078;
+          &#x0079; &#x00FD; &#x0177; &#x00FF; &#x1EF5; &#x1EF3; &#x1EF7; &#x1EF9; &#x007A;
+          &#x017A; &#x017E; &#x017C; &#x1D62; &#x02E1; &#x207F; &#x02B3; &#x00AA; &#x00BA;
+          &#x0410; &#x0411; &#x0412; &#x0413; &#x0403; &#x0414; &#x0415; &#x0401; &#x0416;
+          &#x0417; &#x0418; &#x0419; &#x041A; &#x040C; &#x041B; &#x041C; &#x041D; &#x041E;
+          &#x041F; &#x0420; &#x0421; &#x0422; &#x0423; &#x0424; &#x0425; &#x0427; &#x0426;
+          &#x0428; &#x0429; &#x042C; &#x042B; &#x042A; &#x0405; &#x042D; &#x0406; &#x0407;
+          &#x0408; &#x042E; &#x042F; &#x04C0; &#x04E2; &#x04EE; &#x0430; &#x0431; &#x0432;
+          &#x0433; &#x0453; &#x0434; &#x0435; &#x0451; &#x0436; &#x0437; &#x0438; &#x0439;
+          &#x043A; &#x045C; &#x043B; &#x043C; &#x043D; &#x043E; &#x043F; &#x0440; &#x0441;
+          &#x0442; &#x0443; &#x0444; &#x0445; &#x0447; &#x0446; &#x0448; &#x0449; &#x044C;
+          &#x044B; &#x044A; &#x0455; &#x044D; &#x0456; &#x0458; &#x044E; &#x044F; &#x04BB;
+          &#x04E3; &#x04EF; &#x0391; &#x0392; &#x0393; &#x0394; &#x0395; &#x0396; &#x0397;
+          &#x0398; &#x0399; &#x039A; &#x039B; &#x039C; &#x039D; &#x039E; &#x039F; &#x03A0;
+          &#x03A1; &#x03A3; &#x03A4; &#x03A5; &#x03A6; &#x03A7; &#x03A8; &#x03A9; &#x0386;
+          &#x0388; &#x0389; &#x038A; &#x038C; &#x038E; &#x038F; &#x03AA; &#x03AB; &#x03B1;
+          &#x03B2; &#x03B3; &#x03B4; &#x03B5; &#x03B6; &#x03B7; &#x03B8; &#x03B9; &#x03BA;
+          &#x03BB; &#x03BC; &#x03BD; &#x03BE; &#x03BF; &#x03C0; &#x03C1; &#x03C2; &#x03C3;
+          &#x03C4; &#x03C5; &#x03C6; &#x03C7; &#x03C8; &#x03C9; &#x03AF; &#x03CA; &#x0390;
+          &#x03CD; &#x03CB; &#x03B0; &#x03CC; &#x03CE; &#x03AC; &#x03AD; &#x03AE; &#x2102;
+          &#x210D; &#x2115; &#x2119; &#x211A; &#x211D; &#x2124; &#x1D47; &#x1D9C; &#x0030;
+          &#x0031; &#x0032; &#x0033; &#x0034; &#x0035; &#x0036; &#x0037; &#x0038; &#x0039;
+          &#x215F; &#x00BD; &#x2189; &#x2153; &#x2154; &#x00BC; &#x00BE; &#x2155; &#x2156;
+          &#x2157; &#x2158; &#x2159; &#x215A; &#x2150; &#x215B; &#x215C; &#x215D; &#x215E;
+          &#x2151; &#x2152; &#x2080; &#x2081; &#x2082; &#x2083; &#x2084; &#x2085; &#x2086;
+          &#x2087; &#x2088; &#x2089; &#x2070; &#x00B9; &#x00B2; &#x00B3; &#x2074; &#x2075;
+          &#x2076; &#x2077; &#x2078; &#x2079; &#x0387; &#x037E; &#x27E8; &#x27E9; &#x002E;
+          &#x002C; &#x003A; &#x003B; &#x2026; &#x0021; &#x00A1; &#x003F; &#x00BF; &#x00B7;
+          &#x2022; &#x002A; &#x203C; &#x0023; &#x2024; &#x002F; &#x005C; &#x2025; &#x002D;
+          &#x2013; &#x2014; &#x005F; &#x208D; &#x208E; &#x0028; &#x0029; &#x007B; &#x007D;
+          &#x005B; &#x005D; &#x2308; &#x230A; &#x2309; &#x230B; &#x207D; &#x207E; &#x201A;
+          &#x201E; &#x201C; &#x201D; &#x2018; &#x2019; &#x201B; &#x00AB; &#x00BB; &#x2039;
+          &#x203A; &#x0022; &#x0027; &#x0192; &#x0374; &#x0375; &#x2605; &#x0040; &#x0026;
+          &#x00B6; &#x00A7; &#x00A9; &#x00AE; &#x2122; &#x00B0; &#x2032; &#x2033; &#x007C;
+          &#x00A6; &#x2113; &#x2020; &#x2021; &#x00A2; &#x00A4; &#x0024; &#x20AC; &#x00A3;
+          &#x00A5; &#x2250; &#x2243; &#x2219; &#x2215; &#x2238; &#x2208; &#x220E; &#x208C;
+          &#x207C; &#x2261; &#x2203; &#x2273; &#x2272; &#x208B; &#x207B; &#x228E; &#x2244;
+          &#x220C; &#x2209; &#x2262; &#x2284; &#x2285; &#x002B; &#x2212; &#x00D7; &#x00F7;
+          &#x003D; &#x2260; &#x003E; &#x003C; &#x2265; &#x2264; &#x00B1; &#x2248; &#x007E;
+          &#x00AC; &#x005E; &#x2205; &#x221E; &#x2227; &#x2228; &#x2229; &#x222A; &#x222B;
+          &#x2206; &#x220F; &#x2211; &#x221A; &#x2202; &#x00B5; &#x2225; &#x0025; &#x2030;
+          &#x208A; &#x207A; &#x2237; &#x225F; &#x22A2; &#x2218; &#x2294; &#x2282; &#x2286;
+          &#x220B; &#x2283; &#x2287; &#x22A4; &#x22A3; &#x2204; &#x2234; &#x2288; &#x2289;
+          &#x228A; &#x228B; &#x2295; &#x2200; &#x22A5; &#x2982; &#x2297; &#x2191; &#x2197;
+          &#x2192; &#x2198; &#x2193; &#x2199; &#x2190; &#x2196; &#x2194; &#x2195; &#x219E;
+          &#x21A0; &#x21D2; &#x21D0; &#x21D4; &#x2581; &#x2582; &#x2583; &#x2584; &#x2585;
+          &#x2586; &#x2587; &#x2588; &#x2580; &#x2594; &#x258F; &#x258E; &#x258D; &#x258C;
+          &#x258B; &#x258A; &#x2589; &#x2590; &#x2595; &#x2596; &#x2597; &#x2598; &#x2599;
+          &#x259A; &#x259B; &#x259C; &#x259D; &#x259E; &#x259F; &#x2591; &#x2592; &#x2593;
+          &#x2566; &#x2557; &#x2554; &#x2550; &#x2569; &#x255D; &#x255A; &#x2551; &#x256C;
+          &#x2563; &#x2560; &#x2565; &#x2556; &#x2553; &#x2530; &#x2512; &#x2527; &#x250E;
+          &#x251F; &#x2541; &#x252F; &#x2511; &#x2529; &#x250D; &#x2521; &#x2547; &#x2564;
+          &#x2555; &#x2552; &#x254D; &#x254F; &#x257B; &#x2533; &#x2513; &#x250F; &#x2501;
+          &#x2578; &#x257E; &#x2509; &#x250B; &#x257A; &#x2505; &#x2507; &#x2579; &#x253B;
+          &#x251B; &#x257F; &#x2517; &#x2503; &#x254B; &#x252B; &#x2523; &#x2545; &#x252D;
+          &#x2535; &#x253D; &#x2532; &#x253A; &#x254A; &#x2543; &#x256E; &#x256D; &#x256F;
+          &#x2570; &#x254C; &#x254E; &#x2573; &#x2572; &#x2571; &#x2577; &#x252C; &#x2510;
+          &#x250C; &#x2574; &#x257C; &#x2508; &#x250A; &#x2576; &#x2504; &#x2506; &#x2575;
+          &#x257D; &#x2534; &#x2518; &#x2514; &#x2502; &#x253C; &#x2524; &#x251C; &#x2546;
+          &#x252E; &#x2536; &#x253E; &#x2531; &#x2539; &#x2549; &#x2544; &#x2500; &#x2568;
+          &#x255C; &#x2559; &#x2540; &#x2538; &#x2526; &#x251A; &#x251E; &#x2516; &#x2548;
+          &#x2537; &#x252A; &#x2519; &#x2522; &#x2515; &#x2567; &#x255B; &#x2558; &#x256B;
+          &#x2562; &#x255F; &#x2542; &#x2528; &#x2520; &#x253F; &#x2525; &#x251D; &#x256A;
+          &#x2561; &#x255E; &#x2665; &#x0384; &#x0385; &#x0323; &#x00A8; &#x02D9; &#x0060;
+          &#x00B4; &#x02DD; &#x02C6; &#x02C7; &#x02D8; &#x02DA; &#x02DC; &#x00AF; &#x00B8;
+          &#x02DB; &#xE0A0; &#xE0A1; &#xE0A2; &#xE0A3; &#xE0B0; &#xE0B1; &#xE0B2; &#xE0B3;
+          &#xE0B4; &#xE0B5; &#xE0B6; &#xE0B7; &#xE0B8; &#xE0B9; &#xE0BA; &#xE0BB; &#xE0BC;
+          &#xE0BD; &#xE0BE; &#xE0BF;
         </div>
       </div>
     </div>
